added cybrary sql injection cert

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 									<br class="visible-sm visible-xs"/><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
 								</li>
 								<li class="item">
-									<span class="title"><strong>SQL Fundamentals <a href="https://www.sololearn.com/Certificate/1060-11760385/pdf/" target="_blank" title="Certificate: Solo Learn - SQL Fundamentals"><i class="fas fa-award"style="color:#7095d1;"></i></a></strong></span>
+									<span class="title"><strong>SQL Fundamentals <a href="https://www.sololearn.com/Certificate/1060-11760385/pdf/" target="_blank" title="Certificate: Solo Learn - SQL Fundamentals"><i class="fas fa-award"style="color:#7095d1;"></i></a><a href="https://goo.gl/XYhHrL" target="_blank" title="Certificate: Cybrary - SQL Injection"><i class="fas fa-award"style="color:#7095d1;"></i></a></strong></span> 
 									<br class="visible-sm visible-xs"/><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
 								</li>
 								<li class="item">
